Glosses-Programmatismou-Metaglottistes/Ergasia2/jvmLExp.output
State 21 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: "start" T_id $@1 stmts "end"

    3 stmts: ε
    4      | stmts stmt

    5 stmt: "(" "int" T_id ")"
    6     | "(" "float" T_id ")"

    7 $@2: ε

    8 stmt: "(" "=" T_id $@2 expr ")"
    9     | "(" "print" expr ")"
   10     | "(" error

   11 relop: ">"
   12      | "<"
   13      | "=="

   14 expr: T_num
   15     | T_fnum
   16     | T_id
   17     | T_id "++"
   18     | "++" T_id
   19     | "+" expr expr
   20     | "-" expr expr
   21     | "*" expr expr
   22     | "/" expr expr

   23 $@3: ε

   24 $@4: ε

   25 expr: "(" relop expr expr $@3 "?" expr $@4 ":" expr ")"
   26     | "(" expr ")"


Terminals, with rules where they appear

    $end (0) 0
    error (256) 10
    "start" (258) 2
    "end" (259) 2
    "print" (260) 9
    "int" (261) 5
    "float" (262) 6
    "++" (263) 17 18
    "+" (264) 19
    "-" (265) 20
    "*" (266) 21
    "/" (267) 22
    "==" (268) 13
    ">" (269) 11
    "<" (270) 12
    "=" (271) 8
    "?" (272) 25
    ":" (273) 25
    "(" (274) 5 6 8 9 10 25 26
    ")" (275) 5 6 8 9 25 26
    T_id <lexical> (276) 2 5 6 8 16 17 18
    T_num <lexical> (277) 14
    T_fnum <lexical> (278) 15


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    program (25)
        on left: 2
        on right: 0
    $@1 (26)
        on left: 1
        on right: 2
    stmts (27)
        on left: 3 4
        on right: 2 4
    stmt (28)
        on left: 5 6 8 9 10
        on right: 4
    $@2 (29)
        on left: 7
        on right: 8
    relop <relopIndex> (30)
        on left: 11 12 13
        on right: 25
    expr <se> (31)
        on left: 14 15 16 17 18 19 20 21 22 25 26
        on right: 8 9 19 20 21 22 25 26
    $@3 (32)
        on left: 23
        on right: 25
    $@4 (33)
        on left: 24
        on right: 25


State 0

    0 $accept: • program $end

    "start"  shift, and go to state 1

    program  go to state 2


State 1

    2 program: "start" • T_id $@1 stmts "end"

    T_id  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    2 program: "start" T_id • $@1 stmts "end"

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    2 program: "start" T_id $@1 • stmts "end"

    $default  reduce using rule 3 (stmts)

    stmts  go to state 6


State 6

    2 program: "start" T_id $@1 stmts • "end"
    4 stmts: stmts • stmt

    "end"  shift, and go to state 7
    "("    shift, and go to state 8

    stmt  go to state 9


State 7

    2 program: "start" T_id $@1 stmts "end" •

    $default  reduce using rule 2 (program)


State 8

    5 stmt: "(" • "int" T_id ")"
    6     | "(" • "float" T_id ")"
    8     | "(" • "=" T_id $@2 expr ")"
    9     | "(" • "print" expr ")"
   10     | "(" • error

    error    shift, and go to state 10
    "print"  shift, and go to state 11
    "int"    shift, and go to state 12
    "float"  shift, and go to state 13
    "="      shift, and go to state 14


State 9

    4 stmts: stmts stmt •

    $default  reduce using rule 4 (stmts)


State 10

   10 stmt: "(" error •

    $default  reduce using rule 10 (stmt)


State 11

    9 stmt: "(" "print" • expr ")"

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 24


State 12

    5 stmt: "(" "int" • T_id ")"

    T_id  shift, and go to state 25


State 13

    6 stmt: "(" "float" • T_id ")"

    T_id  shift, and go to state 26


State 14

    8 stmt: "(" "=" • T_id $@2 expr ")"

    T_id  shift, and go to state 27


State 15

   18 expr: "++" • T_id

    T_id  shift, and go to state 28


State 16

   19 expr: "+" • expr expr

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 29


State 17

   20 expr: "-" • expr expr

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 30


State 18

   21 expr: "*" • expr expr

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 31


State 19

   22 expr: "/" • expr expr

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 32


State 20

   25 expr: "(" • relop expr expr $@3 "?" expr $@4 ":" expr ")"
   26     | "(" • expr ")"

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "=="    shift, and go to state 33
    ">"     shift, and go to state 34
    "<"     shift, and go to state 35
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    relop  go to state 36
    expr   go to state 37


State 21

   16 expr: T_id •
   17     | T_id • "++"

    "++"  shift, and go to state 38

    "++"      [reduce using rule 16 (expr)]
    $default  reduce using rule 16 (expr)


State 22

   14 expr: T_num •

    $default  reduce using rule 14 (expr)


State 23

   15 expr: T_fnum •

    $default  reduce using rule 15 (expr)


State 24

    9 stmt: "(" "print" expr • ")"

    ")"  shift, and go to state 39


State 25

    5 stmt: "(" "int" T_id • ")"

    ")"  shift, and go to state 40


State 26

    6 stmt: "(" "float" T_id • ")"

    ")"  shift, and go to state 41


State 27

    8 stmt: "(" "=" T_id • $@2 expr ")"

    $default  reduce using rule 7 ($@2)

    $@2  go to state 42


State 28

   18 expr: "++" T_id •

    $default  reduce using rule 18 (expr)


State 29

   19 expr: "+" expr • expr

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 43


State 30

   20 expr: "-" expr • expr

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 44


State 31

   21 expr: "*" expr • expr

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 45


State 32

   22 expr: "/" expr • expr

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 46


State 33

   13 relop: "==" •

    $default  reduce using rule 13 (relop)


State 34

   11 relop: ">" •

    $default  reduce using rule 11 (relop)


State 35

   12 relop: "<" •

    $default  reduce using rule 12 (relop)


State 36

   25 expr: "(" relop • expr expr $@3 "?" expr $@4 ":" expr ")"

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 47


State 37

   26 expr: "(" expr • ")"

    ")"  shift, and go to state 48


State 38

   17 expr: T_id "++" •

    $default  reduce using rule 17 (expr)


State 39

    9 stmt: "(" "print" expr ")" •

    $default  reduce using rule 9 (stmt)


State 40

    5 stmt: "(" "int" T_id ")" •

    $default  reduce using rule 5 (stmt)


State 41

    6 stmt: "(" "float" T_id ")" •

    $default  reduce using rule 6 (stmt)


State 42

    8 stmt: "(" "=" T_id $@2 • expr ")"

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 49


State 43

   19 expr: "+" expr expr •

    $default  reduce using rule 19 (expr)


State 44

   20 expr: "-" expr expr •

    $default  reduce using rule 20 (expr)


State 45

   21 expr: "*" expr expr •

    $default  reduce using rule 21 (expr)


State 46

   22 expr: "/" expr expr •

    $default  reduce using rule 22 (expr)


State 47

   25 expr: "(" relop expr • expr $@3 "?" expr $@4 ":" expr ")"

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 50


State 48

   26 expr: "(" expr ")" •

    $default  reduce using rule 26 (expr)


State 49

    8 stmt: "(" "=" T_id $@2 expr • ")"

    ")"  shift, and go to state 51


State 50

   25 expr: "(" relop expr expr • $@3 "?" expr $@4 ":" expr ")"

    $default  reduce using rule 23 ($@3)

    $@3  go to state 52


State 51

    8 stmt: "(" "=" T_id $@2 expr ")" •

    $default  reduce using rule 8 (stmt)


State 52

   25 expr: "(" relop expr expr $@3 • "?" expr $@4 ":" expr ")"

    "?"  shift, and go to state 53


State 53

   25 expr: "(" relop expr expr $@3 "?" • expr $@4 ":" expr ")"

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 54


State 54

   25 expr: "(" relop expr expr $@3 "?" expr • $@4 ":" expr ")"

    $default  reduce using rule 24 ($@4)

    $@4  go to state 55


State 55

   25 expr: "(" relop expr expr $@3 "?" expr $@4 • ":" expr ")"

    ":"  shift, and go to state 56


State 56

   25 expr: "(" relop expr expr $@3 "?" expr $@4 ":" • expr ")"

    "++"    shift, and go to state 15
    "+"     shift, and go to state 16
    "-"     shift, and go to state 17
    "*"     shift, and go to state 18
    "/"     shift, and go to state 19
    "("     shift, and go to state 20
    T_id    shift, and go to state 21
    T_num   shift, and go to state 22
    T_fnum  shift, and go to state 23

    expr  go to state 57


State 57

   25 expr: "(" relop expr expr $@3 "?" expr $@4 ":" expr • ")"

    ")"  shift, and go to state 58


State 58

   25 expr: "(" relop expr expr $@3 "?" expr $@4 ":" expr ")" •

    $default  reduce using rule 25 (expr)
